gcc/testsuite/rust/rustc/ui/const-generics/ice-68875_dg.rs
//@ check-fail

struct DataWrapper<'a> {
    data: &'a [u8; Self::SIZE], // { dg-error "" "" { target *-*-* } }
}

impl DataWrapper<'_> {
    const SIZE: usize = 14;
}

pub fn main() {}

